# dj-snake

./: .editorconfig  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.github/: SECURITY.md
.github/workflows/: codeql-analysis.yml  main.yml
src/dj_snake/: __init__.py  apps.py
src/dj_snake/management/commands/: djloaddata.py
tests/: settings.py  test_djloaddata.py
tests/testapp/: models.py
