[tool.poetry]
name = "dj-snake"
version = "0.1.0"
description = ""
authors = ["Mohit Solanki <mohitsolanki619@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=2.2"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"
pytest = "^6.2.5"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
