[tool.poetry]
name = "dj-snake"
version = "0.1.0"
description = ""
authors = ["Mohit Solanki <mohitsolanki619@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = ">=2.2"

[tool.poetry.dev-dependencies]
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    --ds=tests.settings
    """
django_find_project = false


[tool.coverage.run]
parallel = true
branch = true
source = ["dj_snake"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
