[metadata]
name = dj-snake
version = 1.1.2
description = Django command to install the named fixture(s) in the database without overriding existing primary keys.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Mohit Solanki
author_email = mohitsolanki619@gmail.com
url = https://github.com/mohi7solanki/dj-snake
project_urls =
    Changelog = https://github.com/mohi7solanki/dj-snake/blob/main/HISTORY.rst
    Twitter = https://twitter.com/mohi7solanki
license = MIT
keywords = Django
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires = Django>=2.2
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src
